Adjustments to tiles in portfolio section

--- a/index.html
+++ b/index.html
@@ -160,12 +160,15 @@
           </div>
 
         </div>
+
+        <hr class="my-5">
+
         <section>
 
           <h2 class="my-5 h3 text-center">My Skills</h2>
   
           <!--First row-->
-          <div class="row features-small mt-5 wow fadeIn text-center">
+          <div class="row features-small my-5 wow fadeIn text-center">
   
             <!--Grid column-->
             <div class="col-xl-3 col-lg-6 text-center">
@@ -184,7 +187,7 @@
               <!--Grid row-->
               <div class="row">
                 <div class="col-2">
-                  <img src="assets/img/Icons/VScode.png">
+                  <img src="assets/img/Icons/BootStrapicon.png">
                 </div>
               </div>
               <!--/Grid row-->
@@ -208,7 +211,7 @@
               <!--Grid row-->
               <div class="row">
                 <div class="col-2">
-                  <img src="assets/img/Icons/BootStrapicon.png">
+                  <img src="assets/img/Icons/MySQLIcon.png">
                 </div>
               </div>
               <!--/Grid row-->
@@ -219,31 +222,7 @@
           <!--/First row-->
   
           <!--Second row-->
-          <div class="row features-small mt-4 wow fadeIn text-center">
-  
-            <!--Grid column-->
-            <div class="col-xl-3 col-lg-6 text-center">
-              <!--Grid row-->
-              <div class="row">
-                <div class="col-2">
-                  <img src="assets/img/Icons/NODE.png">
-                </div>
-              </div>
-              <!--/Grid row-->
-            </div>
-            <!--/Grid column-->
-  
-            <!--Grid column-->
-            <div class="col-xl-3 col-lg-6 text-center">
-              <!--Grid row-->
-              <div class="row">
-                <div class="col-2">
-                  <img src="assets/img/Icons/MySQLIcon.png">
-                </div>
-              </div>
-              <!--/Grid row-->
-            </div>
-            <!--/Grid column-->
+          <div class="row features-small my-5 wow fadeIn text-center">
   
             <!--Grid column-->
             <div class="col-xl-3 col-lg-6 text-center">
@@ -262,7 +241,31 @@
               <!--Grid row-->
               <div class="row">
                 <div class="col-2">
+                  <img src="assets/img/Icons/ExpressJS.png">
+                </div>
+              </div>
+              <!--/Grid row-->
+            </div>
+            <!--/Grid column-->
+  
+            <!--Grid column-->
+            <div class="col-xl-3 col-lg-6 text-center">
+              <!--Grid row-->
+              <div class="row">
+                <div class="col-2">
                   <img src="assets/img/Icons/REACT.png">
+                </div>
+              </div>
+              <!--/Grid row-->
+            </div>
+            <!--/Grid column-->
+  
+            <!--Grid column-->
+            <div class="col-xl-3 col-lg-6 text-center">
+              <!--Grid row-->
+              <div class="row">
+                <div class="col-2">
+                  <img src="assets/img/Icons/NodeJS.png">
                 </div>
               </div>
               <!--/Grid row-->
@@ -305,7 +308,7 @@
             <!--Second row-->
             <div class="row">
               <div class="col-12">
-                <h6 class="feature-title"><a href="https://justmrmatt.github.io/Project_1/">Grab a Bite App</a></h6>
+                <h6 class="feature-title"><a href="https://justmrmatt.github.io/Project_1/"></a></h6>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -371,9 +374,9 @@
               <div class="row">
                 <div class="col-12">
                     <div class = "thumbnail">
-                        <img src = "assets/img/Icons/REACT.png" alt = "Generic placeholder thumbnail">
+                      <a href="https://justmrmatt.github.io/Project_1/"><img src = "assets/img/GrabABiteResized.PNG" alt = "Generic placeholder thumbnail"></a>
                      </div>
-                  <h6 class="feature-title"><a  href="">Str8 Fire Technical Solutions</a></h6>
+                  <h6 class="feature-title"><a  href="https://justmrmatt.github.io/Project_1/">Grab A Bite!</a></h6>
                   <div style="height:15px"></div>
                 </div>
               </div>
