portfolio section adjustments

--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
 
             <!-- Content -->
             <div class="text-center white-text mx-10 wow fadeIn">
-              <h1 class="mb-4"><strong>Front End Web Developer</strong></h1>
+              <h1 class="mb-4"><strong>Matthew Allen</strong></h1>
+              <h2 class="mb-4"><strong>Front End Web Developer</strong></h2>
             </div>
           </div>
         </div>
@@ -277,7 +278,7 @@
   
         </section>
 
-      </section>
+     
 
       <hr class="my-5">
 
@@ -308,37 +309,13 @@
             <!--Second row-->
             <div class="row">
               <div class="col-12">
-                <h6 class="feature-title"><a href="https://justmrmatt.github.io/Project_1/"></a></h6>
-                <div style="height:15px"></div>
+                <h6 class="feature-title"><a href=""></a>Str8 Fire Technical Solutions</h6>
+                <div style="height:15px">A cryptocurrency website offering various crypto related services</div>
               </div>
             </div>
             <!--/Second row-->
-
-            <!--Third row-->
-            <div class="row">
-              <div class="col-12">
-                <h6 class="feature-title"><a href="https://justmrmatt.github.io/unit-4-game/">Str8 Fire Technical Solutions</a></h6>
-                <div style="height:15px"></div>
-              </div>
-            </div>
-            <!--/Third row-->
-            <div class="row">
-                <div class="col-12">
-                  <h6 class="feature-title"><a  href="https://justmrmatt.github.io/unit-4-game-Redux/">Crystal Collector Game</a></h6>
-                  <div style="height:15px"></div>
-                </div>
-            </div>
-            <!--Fourth row-->
-            <div class="row">
-              <div class="col-12">
-                <h6 class="feature-title"><a  href="https://justmrmatt.github.io/unit-4-game-Redux/">Crystal Collector Game</a></h6>
-                <div style="height:15px"></div>
-              </div>
-            </div>
-            <!--/Fourth row-->
           </div>
-
-          <!--Third column-->
+          <!--Second column-->
           <div class="col-4 text-center">
             <!--First row-->
             <div class="row">
@@ -355,18 +332,11 @@
             <!--Second row-->
             <div class="row">
               <div class="col-12">
-                <h6 class="feature-title"><a  href="">Allen, Allen & Foster, LLC.</a></h6>
+                <h6 class="feature-title"><a  href="">Crystal Collector Game</a></h6>
+                <div style="height:15px">A memory game utilizing Jquery and Bootstrap</div>
               </div>
             </div>
             <!--/Second row-->
-
-            <!--Third row-->
-            <div class="row">
-              <div class="col-12">
-                <h6 class="feature-title"><a  href="">The Bearded Veteran</a></h6>
-                <div style="height:15px"></div>
-              </div>
-            </div>
           </div>
           <!--/Third column-->
           <div class="col-4 text-center">
@@ -381,10 +351,19 @@
                 </div>
               </div>
               <!--/First row-->
-            </div> 
+              <!--/Second row-->
+              <div class="row">
+                  <div class="col-12">
+                    <h6 class="feature-title"><a  href="">The Bearded Veteran</a></h6>
+                    <div style="height:15px">An amazon business started and run by an US Veteran</div>
+                  </div>
+                </div>
+              </div>
+              <!--/Second row-->
+          </div> 
         </div>
-        <!--/First row-->
-
+        <!--/Third Column-->
+      
       </section>
       <!--Section: Not enough-->
 
@@ -394,14 +373,12 @@
 
       <!--Section: More-->
 
-    </div>
-
-  </br>
+    </section>
   </main>
   <!--Main layout-->
-
+  
   <!--Footer-->
-  <footer class="page-footer text-center font-large mt-4 wow fadeIn">
+  <footer class="page-footer text-center font-large">
 
     <!-- Social icons -->
     <div class="pb-4">
@@ -420,7 +397,7 @@
     <!-- Social icons -->
   </footer>
   <!--/.Footer-->
-
+ 
   <!-- SCRIPTS -->
   <!-- JQuery -->
   <script type="text/javascript" src="assets/js/jquery-3.4.1.min.js"></script>
