--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
             <!--Second row-->
             <div class="row">
               <div class="col-12">
-                <h6 class="feature-title"><a href=""></a>Str8 Fire Technical Solutions</h6>
+                <h6 class="feature-title"><a href="">Str8 Fire Technical Solutions</a></h6>
                 <div style="height:15px">A cryptocurrency website offering various crypto related services</div>
               </div>
             </div>
@@ -355,7 +355,7 @@
               <div class="row">
                   <div class="col-12">
                     <h6 class="feature-title"><a  href="">The Bearded Veteran</a></h6>
-                    <div style="height:15px">An amazon business started and run by an US Veteran</div>
+                    <div style="height:15px">An amazon business started and run by a US Veteran</div>
                   </div>
                 </div>
               </div>
