--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             <div class="row">
               <div class="col-12">
                   <div class = "thumbnail">
-                      <img src = "assets/img/CrystalCollectorResized.png" alt = "Generic placeholder thumbnail">
+                      <img src = "assets/img/CrystalCollectorResized.PNG" alt = "Generic placeholder thumbnail">
                    </div>
                 <h6 class="feature-title"><a  href="">Crystal Collector Game</a></h6>
                 <div style="height:15px"></div>
