setting up functional links

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                   <div class = "thumbnail">
                       <img src = "assets/img/Route420ThumbnailResized.jpg" alt = "Generic placeholder thumbnail">
                    </div>
-                <h6 class="feature-title"><a href="">Route 420 App</a></h6>
+                <h6 class="feature-title"><a href="https://jdwuxui.github.io/route420CBD/" target="_blank">Route 420 App</a></h6>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -289,7 +289,7 @@
                   <div class = "thumbnail">
                       <img src = "assets/img/ToyStoryClickResized.png" alt = "Generic placeholder thumbnail">
                    </div>
-                <h6 class="feature-title"><a href="">Toy Story Memory Clicker</a></h6>
+                <h6 class="feature-title"><a>Toy Story Memory Clicker</a></h6>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -303,7 +303,7 @@
                   <div class = "thumbnail">
                       <img src = "assets/img/Str8FireResized.png" alt = "Generic placeholder thumbnail">
                    </div>
-                <h6 class="feature-title"><a  href="">Str8 Fire Technical Solutions</a></h6>
+                <h6 class="feature-title"><a>Str8 Fire Technical Solutions</a></h6>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -315,7 +315,7 @@
                   <div class = "thumbnail">
                       <img src = "assets/img/CrystalCollectorResized.PNG" alt = "Generic placeholder thumbnail">
                    </div>
-                <h6 class="feature-title"><a  href="">Crystal Collector Game</a></h6>
+                <h6 class="feature-title"><a  href="https://justmrmatt.github.io/unit-4-game-Redux/" target="_blank">Crystal Collector Game</a></h6>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -329,7 +329,7 @@
                     <div class = "thumbnail">
                       <a href="https://justmrmatt.github.io/Project_1/"><img src = "assets/img/GrabABiteResized.PNG" alt = "Generic placeholder thumbnail"></a>
                      </div>
-                  <h6 class="feature-title"><a  href="https://justmrmatt.github.io/Project_1/">Grab A Bite!</a></h6>
+                  <h6 class="feature-title"><a  href="https://justmrmatt.github.io/Project_1/" target="_blank">Grab A Bite!</a></h6>
                   <div style="height:15px"></div>
                 </div>
               </div>
@@ -340,7 +340,7 @@
                       <div class = "thumbnail">
                         <a href=""><img src = "assets/img/DeadpoolRPGThumbnailResized.jpg" alt = "Generic placeholder thumbnail"></a>
                       </div>
-                    <h6 class="feature-title"><a  href="">Funko Style RPG Game</a></h6>
+                    <h6 class="feature-title"><a  href="https://justmrmatt.github.io/unit-4-game/" target="_blank">Funko Style RPG Game</a></h6>
                     <div style="height:15px"></div>
                   </div>
                 </div>
