Making Pictures Clickable

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             <div class="row">
               <div class="col-12">
                   <div class = "thumbnail">
-                      <img src = "assets/img/Route420ThumbnailResized.jpg" alt = "Generic placeholder thumbnail">
+                      <a href="https://jdwuxui.github.io/route420CBD/" target="_blank"><img src = "assets/img/Route420ThumbnailResized.jpg" alt = "Route 420 App"></a>
                    </div>
                 <h6 class="feature-title"><a href="https://jdwuxui.github.io/route420CBD/" target="_blank">Route 420 App</a></h6>
                 <div style="height:15px"></div>
@@ -287,7 +287,7 @@
             <div class="row">
               <div class="col-12">
                   <div class = "thumbnail">
-                      <img src = "assets/img/ToyStoryClickResized.png" alt = "Generic placeholder thumbnail">
+                      <img src = "assets/img/ToyStoryClickResized.png" alt = "Toy Story Clicker Game">
                    </div>
                 <h6 class="feature-title"><a>Toy Story Memory Clicker</a></h6>
                 <div style="height:15px"></div>
@@ -301,7 +301,7 @@
             <div class="row">
               <div class="col-12">
                   <div class = "thumbnail">
-                      <img src = "assets/img/Str8FireResized.png" alt = "Generic placeholder thumbnail">
+                      <img src = "assets/img/Str8FireResized.png" alt = "Str8 Fire Website">
                    </div>
                 <h6 class="feature-title"><a>Str8 Fire Technical Solutions</a></h6>
                 <div style="height:15px"></div>
@@ -313,7 +313,7 @@
             <div class="row">
               <div class="col-12">
                   <div class = "thumbnail">
-                      <img src = "assets/img/CrystalCollectorResized.PNG" alt = "Generic placeholder thumbnail">
+                      <a  href="https://justmrmatt.github.io/unit-4-game-Redux/" target="_blank"><img src = "assets/img/CrystalCollectorResized.PNG" alt = "Crystal Collector Game"></a>
                    </div>
                 <h6 class="feature-title"><a  href="https://justmrmatt.github.io/unit-4-game-Redux/" target="_blank">Crystal Collector Game</a></h6>
                 <div style="height:15px"></div>
@@ -327,7 +327,7 @@
               <div class="row">
                 <div class="col-12">
                     <div class = "thumbnail">
-                      <a href="https://justmrmatt.github.io/Project_1/"><img src = "assets/img/GrabABiteResized.PNG" alt = "Generic placeholder thumbnail"></a>
+                        <a  href="https://justmrmatt.github.io/Project_1/" target="_blank"><img src = "assets/img/GrabABiteResized.PNG" alt = "Grab A Bite App"></a>
                      </div>
                   <h6 class="feature-title"><a  href="https://justmrmatt.github.io/Project_1/" target="_blank">Grab A Bite!</a></h6>
                   <div style="height:15px"></div>
@@ -338,7 +338,7 @@
               <div class="row">
                   <div class="col-12">
                       <div class = "thumbnail">
-                        <a href=""><img src = "assets/img/DeadpoolRPGThumbnailResized.jpg" alt = "Generic placeholder thumbnail"></a>
+                        <a href="https://justmrmatt.github.io/unit-4-game/" target="_blank"><img src = "assets/img/DeadpoolRPGThumbnailResized.jpg" alt = "Deadpool Battle Simulator"></a>
                       </div>
                     <h6 class="feature-title"><a  href="https://justmrmatt.github.io/unit-4-game/" target="_blank">Funko Style RPG Game</a></h6>
                     <div style="height:15px"></div>
