--- a/index.html
+++ b/index.html
@@ -287,9 +287,9 @@
             <div class="row">
               <div class="col-12">
                   <div class = "thumbnail">
-                      <img src = "assets/img/ToyStoryClickResized.png" alt = "Toy Story Clicker Game">
+                      <a href="https://justmrmatt.github.io/ClickyClicky/"><img src = "assets/img/ToyStoryClickResized.png" alt = "Toy Story Clicker Game"></a>
                    </div>
-                <h6 class="feature-title"><a>Toy Story Memory Clicker</a></h6>
+                <h6 class="feature-title"><a href="https://justmrmatt.github.io/ClickyClicky/">Toy Story Memory Clicker</a></h6>
                 <div style="height:15px"></div>
               </div>
             </div>
