--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
   <!-- Material Design Bootstrap -->
   <link href="assets/css/mdb.min.css" rel="stylesheet">
   <!-- Your custom styles (optional) -->
-  <link href="assets/css/MyStyle.css" rel="stylesheet">
   <link href="assets/css/style.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Lobster|Maven+Pro|Merienda|Merriweather|Playfair+Display&display=swap" rel="stylesheet">
+  <link href="assets/css/MyStyle.css" rel="stylesheet">
 
 </head>
 
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
+  <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar" id="navbar">
     <div class="container">
 
       <!-- Brand -->
@@ -46,15 +46,7 @@
               <span class="sr-only">(current)</span>
             </a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="" target="_blank"></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="" target="_blank"></a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="" target="_blank"></a>
-          </li>
+     
         </ul>
 
         <!-- Right -->
