adjustments to thumbnail sizing

--- a/index.html
+++ b/index.html
@@ -275,9 +275,9 @@
             <div class="row">
               <div class="col-12">
                   <div class = "thumbnail">
-                      <a href="https://jdwuxui.github.io/route420CBD/" target="_blank"><img src = "assets/img/Route420ThumbnailResized.jpg" alt = "Route 420 App"></a>
+                      <a href="https://route420react.herokuapp.com" target="_blank"><img src = "assets/img/Route420ThumbnailResized.jpg" alt = "Route 420 App" width="100%" height="auto"></a>
                    </div>
-                <h6 class="feature-title"><a href="https://jdwuxui.github.io/route420CBD/" target="_blank">Route 420 App</a></h6>
+                <h6 class="feature-title"><a href="https://route420react.herokuapp.com" target="_blank">Route 420 App</a></h6>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -287,9 +287,9 @@
             <div class="row">
               <div class="col-12">
                   <div class = "thumbnail">
-                      <a href="https://justmrmatt.github.io/ClickyClicky/"><img src = "assets/img/ToyStoryClickResized.png" alt = "Toy Story Clicker Game"></a>
+                      <a href="https://justmrmatt.github.io/ClickyClicky/" target="_blank"><img src = "assets/img/ToyStoryClickResized.png" alt = "Toy Story Clicker Game" width="100%" height="auto"></a>
                    </div>
-                <h6 class="feature-title"><a href="https://justmrmatt.github.io/ClickyClicky/">Toy Story Memory Clicker</a></h6>
+                <h6 class="feature-title"><a href="https://justmrmatt.github.io/ClickyClicky/" target="_blank">Toy Story Memory Clicker</a></h6>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -301,7 +301,7 @@
             <div class="row">
               <div class="col-12">
                   <div class = "thumbnail">
-                      <img src = "assets/img/Str8FireResized.png" alt = "Str8 Fire Website">
+                      <img src = "assets/img/Str8FireResized.png" alt = "Str8 Fire Website" width="100%" height="auto">
                    </div>
                 <h6 class="feature-title"><a>Str8 Fire Technical Solutions</a></h6>
                 <div style="height:15px"></div>
@@ -313,7 +313,7 @@
             <div class="row">
               <div class="col-12">
                   <div class = "thumbnail">
-                      <a  href="https://justmrmatt.github.io/unit-4-game-Redux/" target="_blank"><img src = "assets/img/CrystalCollectorResized.PNG" alt = "Crystal Collector Game"></a>
+                      <a  href="https://justmrmatt.github.io/unit-4-game-Redux/" target="_blank"><img src = "assets/img/CrystalCollectorResized.PNG" alt = "Crystal Collector Game" width="100%" height="auto"></a>
                    </div>
                 <h6 class="feature-title"><a  href="https://justmrmatt.github.io/unit-4-game-Redux/" target="_blank">Crystal Collector Game</a></h6>
                 <div style="height:15px"></div>
@@ -327,7 +327,7 @@
               <div class="row">
                 <div class="col-12">
                     <div class = "thumbnail">
-                        <a  href="https://justmrmatt.github.io/Project_1/" target="_blank"><img src = "assets/img/GrabABiteResized.PNG" alt = "Grab A Bite App"></a>
+                        <a  href="https://justmrmatt.github.io/Project_1/" target="_blank"><img src = "assets/img/GrabABiteResized.PNG" alt = "Grab A Bite App" width="100%" height="auto"></a>
                      </div>
                   <h6 class="feature-title"><a  href="https://justmrmatt.github.io/Project_1/" target="_blank">Grab A Bite!</a></h6>
                   <div style="height:15px"></div>
@@ -338,7 +338,7 @@
               <div class="row">
                   <div class="col-12">
                       <div class = "thumbnail">
-                        <a href="https://justmrmatt.github.io/unit-4-game/" target="_blank"><img src = "assets/img/DeadpoolRPGThumbnailResized.jpg" alt = "Deadpool Battle Simulator"></a>
+                        <a href="https://justmrmatt.github.io/unit-4-game/" target="_blank"><img src = "assets/img/DeadpoolRPGThumbnailResized.jpg" alt = "Deadpool Battle Simulator" width="100%" height="auto"></a>
                       </div>
                     <h6 class="feature-title"><a  href="https://justmrmatt.github.io/unit-4-game/" target="_blank">Funko Style RPG Game</a></h6>
                     <div style="height:15px"></div>
