more sizing and thumbnail adjustments

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
             <div class="row">
               <div class="col-12">
                   <div class = "thumbnail">
-                      <a href="https://route420react.herokuapp.com" target="_blank"><img src = "assets/img/Route420ThumbnailResized.jpg" alt = "Route 420 App" width="100%" height="auto"></a>
+                      <a href="https://route420react.herokuapp.com" target="_blank"><img src = "assets/img/Route420Thumbnail.JPG" alt = "Route 420 App" width="100%" height="auto"></a>
                    </div>
                 <h6 class="feature-title"><a href="https://route420react.herokuapp.com" target="_blank">Route 420 App</a></h6>
                 <div style="height:15px"></div>
@@ -279,7 +279,7 @@
             <div class="row">
               <div class="col-12">
                   <div class = "thumbnail">
-                      <a href="https://justmrmatt.github.io/ClickyClicky/" target="_blank"><img src = "assets/img/ToyStoryClickResized.png" alt = "Toy Story Clicker Game" width="100%" height="auto"></a>
+                      <a href="https://justmrmatt.github.io/ClickyClicky/" target="_blank"><img src = "assets/img/ToyStoryClick.PNG" alt = "Toy Story Clicker Game" width="100%" height="auto"></a>
                    </div>
                 <h6 class="feature-title"><a href="https://justmrmatt.github.io/ClickyClicky/" target="_blank">Toy Story Memory Clicker</a></h6>
                 <div style="height:15px"></div>
@@ -293,7 +293,7 @@
             <div class="row">
               <div class="col-12">
                   <div class = "thumbnail">
-                      <img src = "assets/img/Str8FireResized.png" alt = "Str8 Fire Website" width="100%" height="auto">
+                      <img src = "assets/img/Placeholder.JPG" alt = "Str8 Fire Website" width="100%" height="auto">
                    </div>
                 <h6 class="feature-title"><a>Str8 Fire Technical Solutions</a></h6>
                 <div style="height:15px"></div>
@@ -305,7 +305,7 @@
             <div class="row">
               <div class="col-12">
                   <div class = "thumbnail">
-                      <a  href="https://justmrmatt.github.io/unit-4-game-Redux/" target="_blank"><img src = "assets/img/CrystalCollectorResized.PNG" alt = "Crystal Collector Game" width="100%" height="auto"></a>
+                      <a  href="https://justmrmatt.github.io/unit-4-game-Redux/" target="_blank"><img src = "assets/img/CrystalCollector.PNG" alt = "Crystal Collector Game" width="100%" height="auto"></a>
                    </div>
                 <h6 class="feature-title"><a  href="https://justmrmatt.github.io/unit-4-game-Redux/" target="_blank">Crystal Collector Game</a></h6>
                 <div style="height:15px"></div>
@@ -319,7 +319,7 @@
               <div class="row">
                 <div class="col-12">
                     <div class = "thumbnail">
-                        <a  href="https://justmrmatt.github.io/Project_1/" target="_blank"><img src = "assets/img/GrabABiteResized.PNG" alt = "Grab A Bite App" width="100%" height="auto"></a>
+                        <a  href="https://justmrmatt.github.io/Project_1/" target="_blank"><img src = "assets/img/GrabABite.PNG" alt = "Grab A Bite App" width="100%" height="auto"></a>
                      </div>
                   <h6 class="feature-title"><a  href="https://justmrmatt.github.io/Project_1/" target="_blank">Grab A Bite!</a></h6>
                   <div style="height:15px"></div>
@@ -330,7 +330,7 @@
               <div class="row">
                   <div class="col-12">
                       <div class = "thumbnail">
-                        <a href="https://justmrmatt.github.io/unit-4-game/" target="_blank"><img src = "assets/img/DeadpoolRPGThumbnailResized.jpg" alt = "Deadpool Battle Simulator" width="100%" height="auto"></a>
+                        <a href="https://justmrmatt.github.io/unit-4-game/" target="_blank"><img src = "assets/img/DeadpoolRPGThumbnail.JPG" alt = "Deadpool Battle Simulator" width="100%" height="auto"></a>
                       </div>
                     <h6 class="feature-title"><a  href="https://justmrmatt.github.io/unit-4-game/" target="_blank">Funko Style RPG Game</a></h6>
                     <div style="height:15px"></div>
