--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <div class="col-xl-3 col-lg-6 text-center">
               <!--Grid row-->
               <div class="row">
-                <div class="col-2">
+                <div class="col">
                   <img src="assets/img/Icons/skillsIcons.png">
                 </div>
               </div>
@@ -156,7 +156,7 @@
             <div class="col-xl-3 col-lg-6 text-center">
               <!--Grid row-->
               <div class="row">
-                <div class="col-2">
+                <div class="col">
                   <img src="assets/img/Icons/BootStrapicon.png">
                 </div>
               </div>
@@ -168,7 +168,7 @@
             <div class="col-xl-3 col-lg-6 text-center">
               <!--Grid row-->
               <div class="row">
-                <div class="col-2">
+                <div class="col">
                   <img src="assets/img/Icons/BULMAicon.png">
                 </div>
               </div>
@@ -180,7 +180,7 @@
             <div class="col-xl-3 col-lg-6 text-center">
               <!--Grid row-->
               <div class="row">
-                <div class="col-2">
+                <div class="col">
                   <img src="assets/img/Icons/MySQLIcon.png">
                 </div>
               </div>
@@ -198,7 +198,7 @@
             <div class="col-xl-3 col-lg-6 text-center">
               <!--Grid row-->
               <div class="row">
-                <div class="col-2">
+                <div class="col">
                   <img src="assets/img/Icons/Mongo.png">
                 </div>
               </div>
@@ -210,7 +210,7 @@
             <div class="col-xl-3 col-lg-6 text-center">
               <!--Grid row-->
               <div class="row">
-                <div class="col-2">
+                <div class="col">
                   <img src="assets/img/Icons/ExpressJS.png">
                 </div>
               </div>
@@ -222,7 +222,7 @@
             <div class="col-xl-3 col-lg-6 text-center">
               <!--Grid row-->
               <div class="row">
-                <div class="col-2">
+                <div class="col">
                   <img src="assets/img/Icons/REACT.png">
                 </div>
               </div>
@@ -234,7 +234,7 @@
             <div class="col-xl-3 col-lg-6 text-center">
               <!--Grid row-->
               <div class="row">
-                <div class="col-2">
+                <div class="col">
                   <img src="assets/img/Icons/NodeJS.png">
                 </div>
               </div>
@@ -256,20 +256,21 @@
       <!--Section: Not enough-->
       <section>
 
-        <h2 class="my-5 h3 text-center">My Portfolio</h2>
+        <h2 class="text-center">My Portfolio</h2>
+        <h5 class="text-center">** denotes work in progress</h5>
 
         <!--First row-->
         <div class="row features-small mb-5 mt-3 wow fadeIn">
 
           <!--First column-->
-          <div class="col-4 text-center">
+          <div class="col text-center">
             <!--First row-->
             <div class="row">
               <div class="col-12">
                   <div class = "thumbnail">
                       <a href="https://route420react.herokuapp.com" target="_blank"><img src = "assets/img/Route420Thumbnail.JPG" alt = "Route 420 App" width="100%" height="auto"></a>
                    </div>
-                <h6 class="feature-title"><a href="https://route420react.herokuapp.com" target="_blank">Route 420 App</a></h6>
+                <h6 class="feature-title"><a href="https://route420react.herokuapp.com" target="_blank">Route 420 App**</a></h6>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -288,14 +289,14 @@
             <!--/Second row-->
           </div>
           <!--Second column-->
-          <div class="col-4 text-center">
+          <div class="col text-center">
             <!--First row-->
             <div class="row">
               <div class="col-12">
                   <div class = "thumbnail">
                       <img src = "assets/img/Placeholder.JPG" alt = "Str8 Fire Website" width="100%" height="auto">
                    </div>
-                <h6 class="feature-title"><a>Str8 Fire Technical Solutions</a></h6>
+                <h6 class="feature-title"><a>Str8 Fire Technical Solutions**</a></h6>
                 <div style="height:15px"></div>
               </div>
             </div>
@@ -314,14 +315,14 @@
             <!--/Second row-->
           </div>
           <!--/Third column-->
-          <div class="col-4 text-center">
+          <div class="col text-center">
               <!--First row-->
               <div class="row">
                 <div class="col-12">
                     <div class = "thumbnail">
                         <a  href="https://justmrmatt.github.io/Project_1/" target="_blank"><img src = "assets/img/GrabABite.PNG" alt = "Grab A Bite App" width="100%" height="auto"></a>
                      </div>
-                  <h6 class="feature-title"><a  href="https://justmrmatt.github.io/Project_1/" target="_blank">Grab A Bite!</a></h6>
+                  <h6 class="feature-title"><a  href="https://justmrmatt.github.io/Project_1/" target="_blank">Grab A Bite!**</a></h6>
                   <div style="height:15px"></div>
                 </div>
               </div>
