under construction image

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
             <div class="row">
               <div class="col-12">
                   <div class = "thumbnail">
-                      <img src = "assets/img/Placeholder.JPG" alt = "Str8 Fire Website" width="100%" height="auto">
+                      <img src = "assets/img/UnderConstruction.PNG" alt = "Str8 Fire Website" width="100%" height="auto">
                    </div>
                 <h6 class="feature-title"><a>Str8 Fire Technical Solutions**</a></h6>
                 <div style="height:15px"></div>
