new sizing for mobile

--- a/index.html
+++ b/index.html
@@ -356,26 +356,26 @@
         <h2 class="my-5 h3 text-center">Testimonials</h2>
         <div class="row mb-5 mt-3 wow fadeIn">
             <!--First column-->
-            <div class="col-4 text-center">
-                <div style="padding-left: 50px; padding-right: 50px; margin-left: 150px; font-style: italic">"Matt helped me design and build my the website for my business. He has great vision and was able to capture exactly what I was looking for. He is always available to talk through design and help guide us to the product we want to see. He is the go to guy for all of our front-end web development needs!"</div>
+            <div class="col-xl col-lg-12 text-center">
+                <div style="font-style: italic">"Matt helped me design and build my the website for my business. He has great vision and was able to capture exactly what I was looking for. He is always available to talk through design and help guide us to the product we want to see. He is the go to guy for all of our front-end web development needs!"</div>
                 <br>
-                <div style="padding-left: 50px; padding-right: 50px; margin-left: 150px; font-style: italic">Kiefer Gingles, CEO</div>
-                <div style="padding-left: 50px; padding-right: 50px; margin-left: 150px; font-style: italic">Ready Restoration</div>
+                <div style="font-style: italic">Kiefer Gingles, CEO</div>
+                <div style="font-style: italic; padding-bottom: 25px">Ready Restoration</div>
             </div>
             <!--Second column-->
-            <div class="col-4 text-center">
-                <div style="padding-left: 120px; padding-right: 120px; font-style: italic">"I have been going to Matt for all of my software development needs for years. He is always able to help me with any web design needs I have. He has helped me setup and code the front end of our website. He has a great vision and is always patient and willing to make changes until we get the look we want. I always know I can count on him whenever I need some help."</div>
+            <div class="col-xl col-lg-12 text-center">
+                <div style="font-style: italic">"I have been going to Matt for all of my software development needs for years. He is always able to help me with any web design needs I have. He has helped me setup and code the front end of our website. He has a great vision and is always patient and willing to make changes until we get the look we want. I always know I can count on him whenever I need some help."</div>
                 <br>
-                <div style="padding-left: 120px; padding-right: 120px; font-style: italic">Eric Walters, Vice President</div>
-                <div style="padding-left: 120px; padding-right: 120px; font-style: italic">Pensacola Fuel Injection</div>
+                <div style="font-style: italic">Eric Walters, Vice President</div>
+                <div style="font-style: italic; padding-bottom: 25px">Pensacola Fuel Injection</div>
                 <div></div>
             </div>
              <!--Third column-->
-             <div class="col-4 text-center">
-                <div style="padding-left: 50px; padding-right: 50px; margin-right: 150px; font-style: italic">"Matt has been helping me design, build, and manage various websites for both my personal and business needs. He is always eager to work on new projects I have and communicates well. I trust his judgement and value his opinion with all of my technical needs. Matt has also helped me build several computers and always helps me maintain all my tech software."</div>
+             <div class="col-xl col-lg-12 text-center">
+                <div style="font-style: italic">"Matt has been helping me design, build, and manage various websites for both my personal and business needs. He is always eager to work on new projects I have and communicates well. I trust his judgement and value his opinion with all of my technical needs. Matt has also helped me build several computers and always helps me maintain all my tech software."</div>
                 <br>
-                <div style="padding-left: 50px; padding-right: 50px; margin-right: 150px; font-style: italic">Ryan Smeltz, Owner</div>
-                <div style="padding-left: 50px; padding-right: 50px; margin-right: 150px; font-style: italic">The Bearded Veteran</div>
+                <div style="font-style: italic">Ryan Smeltz, Owner</div>
+                <div style="font-style: italic; padding-bottom: 25px">The Bearded Veteran</div>
             </div>
         </div>
     </section>
