--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <div class="row">
               <div class="col-12">
                   <div class = "thumbnail">
-                    <a href="https://academy.ecovs.com" target="_blank"><img src = "assets/img/ECOVSacademyResized.png" alt = "ECOVS Academy" width="100%" height="auto">
+                    <a href="https://academy.ecovs.com" target="_blank"><img src = "assets/img/ECOVSacademy.PNG" alt = "ECOVS Academy" width="100%" height="auto">
                    </div>
                 <h6 class="feature-title"><a>ECOVS Academy</a></h6>
                 <div style="height:15px"></div>
